src/objects/Salary2__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Statements_Due__c</fullName>
        <label>Benefit Statements Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Data_Received__c</fullName>
        <label>Final Data Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_Benefit_Statements_Due__c</fullName>
        <formula>IF(  ISPICKVAL(Payment_Mode__c, &apos;ECS&apos;) , Final_Data_Received__c + 60, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula_Benefit Statements Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <controllingField>Quarter__c</controllingField>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_Date__c</fullName>
        <label>Salary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Salary2</relationshipLabel>
        <relationshipName>Salary2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ctc2__c</fullName>
        <label>ctc2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Salary2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Test__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Test__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Mode__c</field>
            <operation>equals</operation>
            <value>ECS</value>
        </filters>
        <label>test</label>
    </listViews>
    <nameField>
        <label>Salary2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary2</pluralLabel>
    <recordTypes>
        <fullName>Salary</fullName>
        <active>true</active>
        <description>Default layout</description>
        <label>Salary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salary_ECS</fullName>
        <active>true</active>
        <description>Salary ECS</description>
        <label>Salary ECS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Checkbox_field_should_be_false</fullName>
        <active>true</active>
        <errorConditionFormula>CheckBox__c  = true</errorConditionFormula>
        <errorMessage>Checkbox cannot be checked.</errorMessage>
    </validationRules>
</CustomObject>